--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,312 @@
-/* место для вашего кода */
+.header {
+    padding: 92px 24px 96px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 148px 1fr;
+    align-items: center;
+}
+
+.header__menu {
+    justify-self: center;
+}
+
+.header__links-list{
+    display: flex;
+}
+
+.header__links-list-item{
+    list-style: circle;
+    margin: 13px;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+}
+
+.header__links-list-item_no-bullit{
+    list-style: none;
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.logo_image {
+    width: 148px;
+    height: 105px;
+}
+
+.address {
+    justify-self: end;
+    font-style: normal;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 135%;
+    padding-right: 60px;
+}
+
+.address_underline {
+    text-underline-offset: 4px;
+}
+
+.cover {
+    background-color: rgb(0 0 0 / 0.5);
+    width: 1100px;
+    height: 757px;
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 0.6);
+    position: absolute;
+}
+
+.cover__title {
+    position: absolute;
+    right: 50px;
+    left: 50px;
+    top: 165px;
+    width: 1000px;
+    color: white;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 1.2em;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+}
+
+.aligned-text_center {
+    align-self: center;
+}
+
+.aligned-text_right {
+    align-self: self-end;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
+.cover__description-text {
+    position: absolute;
+    bottom: 64px;
+    left: 78px;
+    color: white;
+    font-size: 22px;
+    text-transform: uppercase;
+    font-weight: 400;
+    word-spacing: 18.3px;
+}
+
+.bet-button {
+    position: absolute;
+    right: 50px;
+    bottom: 51px;
+    font-size: 22px;
+    text-transform: uppercase;
+    font-weight: 500;
+    color: white;
+    border: 1px solid #fff;
+    width: 256px;
+    height: 51px;
+    background-color: transparent;
+}
+
+
+.lots {
+    width: 1052px;
+    height: 692px;
+    margin-top: 177px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.lots__heading {
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+    margin-bottom: 27px;
+    margin-left: 40px;
+}
+
+.lots__card-list-item {
+    width: 334px;
+    height: 563px;
+    position: relative;
+}
+
+.lots__card-list {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+
+.card {
+    background-color: antiquewhite;
+
+}
+.card_type_film {
+    background-image: url(/images/card-lot-01.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.card_type_book {
+    background-image: url(/images/card-lot-02.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.card_type_picture {
+    background-image: url(/images/card-lot-03.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.card__overlay {
+    width: 334px;
+    height: 563px;
+    background-color: rgb(0 0 0 / 0.6);
+    position: absolute;
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 120%;
+    text-transform: uppercase;
+    text-decoration: underline;
+    color: #fff;
+    position: absolute;
+    left: 40px;
+    right: 40px;
+    top: 51px;
+}
+
+.card__text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    color: #fff;
+    position: absolute;
+    left: 40px;
+    right: 40px;
+    bottom: 48px;
+}
+
+.lots__look-more-link {
+    font-weight: 400;
+    font-size: 20px;
+    color: #000;
+    padding-left: 40px;
+}
+
+.about {
+    margin-top: 146px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-bottom: 180px;
+    width: 1052px;
+    height: 595px;
+    display: grid;
+    gap: 24px;
+    grid-template-columns: 334px 1fr;
+}
+
+.about__column{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.about__logo {
+    border-radius: 100%;
+    background-color: #000;
+    width: 240px;
+    height: 240px;
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.about__logo-image {
+    width: 143px;
+    height: 113px;
+    align-self: center;
+    justify-self: center;
+}
+
+.about__title {
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #000;
+    margin-top: 136px;
+    margin-bottom: 76px;
+}
+
+.about__text{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.01em;
+    color: #000;
+}
+
+.footer {
+    width: 1000px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__menu-link {
+    font-weight: 400;
+    font-size: 18px;
+    color: #000;
+}
+
+.footer__menu-list {
+    text-align: center;
+}  
+
+.footer__menu-list-item {
+    list-style: none;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    list-style: none;
+    display: flex;
+    gap: 48px;
+}
+
+.footer__social-list-item {
+    width: 48px;
+    height: 48px;
+}
